# FileBundleUtilities

./: CMakeLists.txt  README.md
CLI/: CMakeLists.txt
CLI/src/: Helper.hpp  main.cpp
src/: HelperFunctions.hpp  main.cpp
